<resources>
    <string name="qmobileui_app_name" translatable="false">QMobileUI</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_pending_tasks">Pending Tasks</string>
    <string name="nav_barcode_scan">Barcode Scan</string>
    <string name="nav_feedback">Feedback</string>
    <string name="placeholder_title" translatable="false">___TITLE___</string>
    <string name="placeholder_id" translatable="false">___ID___</string>
    <string name="placeholder_value" translatable="false">___VALUE___</string>
    <string name="try_refresh_data">Please try refreshing data again</string>
    <string name="record_not_found">The record could not be found</string>
    <string name="table_not_found">The table %1$s could not be found</string>
    <string name="incorrect_deeplink">The deeplink url is missing a \'dataClass\' parameter</string>
    <string name="cat_title_server">Server</string>
    <string name="pref_remote_url_key" translatable="false">remote_url</string>
    <string name="pref_remote_url_title">Remote URL</string>
    <string name="cat_account_key" translatable="false">account_category</string>
    <string name="cat_title_account">Account</string>
    <string name="cat_title_feedback">Help and Feedback</string>
    <string name="cat_feedback_key">feedback_category</string>
    <string name="pref_logout_key">logout</string>
    <string name="pref_feedback_key">feedback</string>
    <string name="pref_pending_tasks_key">pending</string>
    <string name="pref_pending_tasks_count">%d pending</string>
    <string name="pref_logout_title">Logout</string>
    <string name="pref_feedback_title">Send feedback</string>
    <string name="pref_feedback_summary">Help us get better</string>
    <string name="pref_logout_summary">Logout current user</string>
    <string name="pref_pending_tasks">Pending tasks</string>
    <string name="logout_dialog_negative">Cancel</string>
    <string name="logout_dialog_positive">Logout</string>
    <string name="logout_dialog_title">Are you sure you want to Logout ?</string>
    <string name="logout_dialog_message">You will need to log in again</string>
    <string name="logout_dialog_message_if_pending_task">Pending tasks will be deleted. Are you sure you want to log out ?</string>
    <string name="settings_navbar_title">Settings</string>
    <string name="no_internet">No Internet connection</string>
    <string name="no_internet_auto_login">No Internet connection, you won\'t be able to perform server requests</string>
    <string name="server_accessible">Server is accessible</string>
    <string name="server_not_accessible">Server is not accessible</string>
    <string name="server_not_accessible_auto_login">Server is not accessible, you won\'t be able to perform server requests</string>
    <string name="server_not_reachable">The server is not reachable</string>
    <string name="open_url_server_not_reachable">The server is not reachable</string>
    <string name="remote_url_placeholder">%1$s - %2$s</string>
    <string name="remote_url_checking">Checking…</string>
    <string name="login_button_text">Login</string>
    <string name="login_placeholder_email">Email</string>
    <string name="login_logged_out">You have been logged out</string>
    <string name="login_invalid_email">Invalid mail address</string>
    <string name="login_image_content_description">Application logo</string>
    <string name="remote_url_dialog_cancel">Cancel</string>
    <string name="open_url_dialog_cancel">Cancel</string>
    <string name="remote_url_dialog_done">Done</string>
    <string name="remote_url_dialog_positive">OK</string>
    <string name="remote_url_dialog_edit">Edit</string>
    <string name="remote_url_invalid">Invalid remote url</string>
    <string name="network_status_image">Network Status Image</string>
    <string name="https_hint">https://…</string>
    <string name="login_qrcode_caption">Scan QR Code to log in</string>
    <string name="login_qrcode_retry">Retry</string>
    <string name="login_google_signing_out">Signing out from Google account</string>
    <string name="login_google_signed_out">Signed out from Google account</string>
    <string name="login_google_no_server_client_id">String resource \"server_client_id\" has not been defined</string>
    <string name="logo_menu_edit_remote_url">Edit remote URL</string>
    <string name="logo_menu_feedback">Help and Feedback</string>
    <string name="web_view_refresh">Refresh</string>
    <string name="web_view_share">Share</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="search_title">search_title</string>
    <string name="action_send_no_internet">Check your Internet connection, your action will be executed later</string>
    <string name="action_send_server_not_accessible">The server is not available, your action will be executed later</string>
    <string name="retry_action">Retry</string>
    <string name="open_url_retry_dialog">Try again</string>
    <string name="validate_action">Validate</string>
    <string name="action_list_title">Actions</string>
    <string name="action_item_image_content_description">Action item image</string>
    <string name="action_remove_item_image_content_description">Remove item image</string>
    <string name="item_parameter_boolean_image_switch_content_description">Image switch for boolean</string>
    <string name="action_parameter_mandatory_error">Field required</string>
    <string name="action_parameter_min_value_error">Must be greater than or equal to %s</string>
    <string name="action_parameter_max_value_error">Must be less than or equal to %s</string>
    <string name="action_parameter_number_error">Field value must be a number</string>
    <string name="action_parameter_invalid_email_error">Invalid email</string>
    <string name="action_parameter_invalid_url_error">Invalid URL</string>
    <string name="action_parameter_image_dialog_title">Add an image</string>
    <string name="action_parameter_image_dialog_photo">Take photo</string>
    <string name="action_parameter_image_dialog_gallery">Choose from Gallery</string>
    <string name="pending_task_menu_item">Pending Tasks</string>
    <string name="pending_task_navbar_title">Pending Tasks</string>
    <string name="scroll_to_not_seen">Scrolling to remaining parameters</string>
    <string name="icon_state_content_description">Completed action icon state</string>
    <string name="completed_tasks_title">Completed tasks</string>
    <string name="server_status_icon">Server status icon</string>
    <string name="pending_task_cancelled">Pending task deleted</string>
    <string name="pending_task_cancelled_undo">Undo</string>
    <string name="item_action_button_ellipsize">…</string>
    <string name="action_time_dialog_negative">Cancel</string>
    <string name="action_time_dialog_positive">OK</string>
    <string name="action_more_button_title">More</string>
    <string name="action_create_image_fail">Could not create temporary file</string>
    <string name="hour_column_title">Hours</string>
    <string name="minute_column_title">Minutes</string>
    <string name="second_column_title">Seconds</string>
    <string name="permission_dialog_title">Permission required</string>
    <string name="permission_dialog_positive">OK</string>
    <string name="permission_dialog_negative">No, thank you</string>
    <string name="permission_rationale_barcode">Permission required to scan bar codes</string>
    <string name="permission_rationale_camera">Permission required to take photos</string>
    <string name="permission_rationale_notifications">Permission required to send you push notifications</string>
    <string name="barcode_camera_back_content_description">Back</string>
    <string name="signature_dialog_title">Sign here</string>
    <string name="signature_dialog_positive">Done</string>
    <string name="signature_dialog_cancel">Cancel</string>
    <string name="input_control_push_baseline">Click to push</string>
    <string name="input_control_popover_baseline">Click to popover</string>
    <string name="input_control_menu_baseline">Click to open the menu</string>
    <string name="input_control_datasource_no_data">Could not get any data for input control \"%s\"</string>
    <string name="input_control_datasource_no_table">There is no table \"%1$s\" (input control \"%2$s\")</string>
    <string name="input_control_datasource_no_field">There is no field \"%1$s\" in table \"%2$s\" (input control \"%3$s\")</string>
    <string name="missing_session_file_logout">You have been logged out, please log in again</string>
    <string name="missing_session_file_logout_with_pending_tasks">You have been logged out with pending actions, please log in again in order to execute these actions</string>
    <string name="max_device_connection_reached">The number of available licenses has been exceeded, please contact your server administrator</string>
    <string name="crash_log_dialog_title">Oops ! It looks like your app didn\'t close correctly</string>
    <string name="crash_log_dialog_message">Want to help us get better ?\nAn error report has been generated, please send it to 4D.com. We\'ll keep your information confidential</string>
    <string name="crash_log_dialog_save_for_later">Save report for later</string>
    <string name="crash_log_dialog_send">Send report</string>
    <string name="crash_log_dialog_deny">Don\'t send a report</string>
    <string name="crash_log_dialog_response_title">Report sent</string>
    <string name="crash_log_dialog_response_message_success">Thank you for helping us improve this app !\nPlease keep the reference %1$s to follow the report</string>
    <string name="crash_log_dialog_response_message_fail">The server did not accept the crash file</string>
    <string name="crash_log_dialog_response_action">OK</string>
    <string name="feedback_menu_title">How can we help you ?</string>
    <string name="feedback_talk_to_us">Talk to us</string>
    <string name="feedback_talk_to_us_body">Give us your feedback</string>
    <string name="feedback_suggest_improvement">Suggest an improvement</string>
    <string name="feedback_suggest_improvement_body">Suggest an improvement here</string>
    <string name="feedback_show_current_log">Show current log</string>
    <string name="feedback_show_current_log_action_dismiss">Dismiss</string>
    <string name="feedback_show_current_log_action_send">Send</string>
    <string name="feedback_show_current_log_action_change_level">Change log level</string>
    <string name="feedback_report_a_problem">Report a problem</string>
    <string name="feedback_report_a_problem_body">What when wrong ?</string>
    <string name="feedback_report_previous_crash">Report previous crash</string>
    <string name="feedback_email_hint">Enter your email</string>
    <string name="feedback_send">Send</string>
    <string name="feedback_send_success">Thank you for your feedback !</string>
    <string name="feedback_send_current_logs">Logs successfully sent</string>
    <string name="feedback_log_attached">Log attached</string>
    <string name="log_level_menu_verbose">Verbose</string>
    <string name="log_level_menu_debug">Debug</string>
    <string name="log_level_menu_info">Info (Default)</string>
    <string name="log_level_menu_warn">Warn</string>
    <string name="log_level_menu_error">Error</string>
    <string name="log_level_menu_assert">Assert</string>
    <string name="log_level_menu_none">None</string>
    <string name="log_level_changed">Log level changed to %s</string>
    <string name="push_cannot_send">Could not send push registration token to server</string>
    <string name="push_channel_id">qmobile_channel_id</string>
    <string name="push_channel_description">Used for 4D push notifications</string>
</resources>