<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Quentin Marciset on 13/2/2020.
  ~ 4D SAS
  ~ Copyright (c) 2020 Quentin Marciset. All rights reserved.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/cat_title_server">

        <Preference
            app:key="@string/pref_remote_url_key"
            app:summary="@string/remote_url_checking"
            app:title="@string/pref_remote_url_title"
            android:icon="@drawable/network_nok_circle"/>

        <Preference
            app:key="@string/pref_pending_tasks_key"
            app:summary="@string/pref_pending_tasks"
            app:title="@string/pref_pending_tasks" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/cat_title_account"
        app:isPreferenceVisible="false"
        app:key="@string/cat_account_key">

        <Preference
            app:key="@string/pref_logout_key"
            app:summary="@string/pref_logout_summary"
            app:title="@string/pref_logout_title" />

    </PreferenceCategory>

</PreferenceScreen>
