<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by qmarciset on 20/12/2022.
  ~ 4D SAS
  ~ Copyright (c) 2022 qmarciset. All rights reserved.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/log_verbose"
        android:title="@string/log_level_menu_verbose" />
    <item
        android:id="@+id/log_debug"
        android:title="@string/log_level_menu_debug" />
    <item
        android:id="@+id/log_info"
        android:title="@string/log_level_menu_info" />
    <item
        android:id="@+id/log_warn"
        android:title="@string/log_level_menu_warn" />
    <item
        android:id="@+id/log_error"
        android:title="@string/log_level_menu_error" />
    <item
        android:id="@+id/log_assert"
        android:title="@string/log_level_menu_assert" />
    <item
        android:id="@+id/log_none"
        android:title="@string/log_level_menu_none" />
</menu>
