<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Quentin Marciset on 24/1/2021.
  ~ 4D SAS
  ~ Copyright (c) 2021 Quentin Marciset. All rights reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/action_web_view_refresh"
        android:icon="@drawable/refresh"
        android:title="@string/web_view_refresh"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_web_view_share"
        android:icon="@drawable/share_variant"
        android:title="@string/web_view_share"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_previous"
        android:enabled="false"
        android:icon="@drawable/baseline_chevron_left_24"
        android:title="@string/previous"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_next"
        android:enabled="false"
        android:icon="@drawable/baseline_chevron_right_24"
        android:title="@string/next"
        app:showAsAction="always" />
</menu>