<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by qmarciset on 14/12/2022.
  ~ 4D SAS
  ~ Copyright (c) 2022 qmarciset. All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/talk_to_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/feedback_talk_to_us" />

            <TextView
                android:id="@+id/suggest_improvement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/feedback_suggest_improvement" />

            <TextView
                android:id="@+id/show_current_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/feedback_show_current_log" />

            <TextView
                android:id="@+id/report_a_problem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/feedback_report_a_problem" />

            <TextView
                android:id="@+id/report_previous_crash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/feedback_report_previous_crash" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
